--- a/templates/index.html
+++ b/templates/index.html
@@ -64,9 +64,9 @@
         </div>
        
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        <div class="col-md-3">
           <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..." class="img-thumbnail">
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..." class="img-thumbnail" width = "100px" height = "100px">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
